iterates through all data files

--- a/covid19/covid.ipynb
+++ b/covid19/covid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 171,
    "metadata": {
     "scrolled": true
    },
@@ -22,29 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
     "mypath = '/home/joe/data/covid19/who/test'\n",
     "#mypath = '/run/user/1000/gvfs/smb-share:server=majesty.local,share=filesjoe/data/who_covid19_reports/renamed'\n",
     "filelist = '/home/joe/datavisions/covid19/filelist'\n",
-    "summary = '/home/joe/data/covid19/summary'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "summary = '/home/joe/data/covid19/summary'\n",
     "#dill.dump_session('data.db')\n",
     "#dill.load_session('data.db')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +54,26 @@
     "    dfDone = pd.DataFrame(doneFiles, columns = ['file'])\n",
     "    #print(dfDone)\n",
     "    \n",
-    "    return dfFiles[dfFiles['file'].isin(dfDone['file']) == False]\n",
-    "    \n"
+    "    return dfFiles[dfFiles['file'].isin(dfDone['file']) == False]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parsePdf(f):\n",
+    "    \n",
+    "    tables = tabula.read_pdf(f, pages = \"all\", multiple_tables = True)\n",
+    "    chinaNumbers = findChina(tables)\n",
+    "       \n",
+    "    return chinaNumbers   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,29 +85,15 @@
     "    output = ['N/A','N/A']\n",
     "    for df in tables:\n",
     "        if (x in df.columns.values):\n",
+    "#            print(df.columns.values)\n",
     "            if (y in df[x].tolist()):\n",
     "                output = re.split('\\\\s+',df['Cumulative'].iloc[-1])\n",
-    "    return output\n"
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parsePdf(f):\n",
-    "    \n",
-    "    tables = tabula.read_pdf(f, pages = \"all\", multiple_tables = True)\n",
-    "    chinaNumbers = findChina(tables)\n",
-    "        \n",
-    "    return chinaNumbers\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +125,7 @@
     "        sys.exit()\n",
     "\n",
     "    try:\n",
+    "        print(\"update filelist \")\n",
     "        fl.write(f + \"\\n\")\n",
     "    except OSError:\n",
     "        print(\"could not append \", filelist)\n",
@@ -156,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 170,
    "metadata": {
     "scrolled": true
    },
@@ -165,62 +157,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found to process:  2020-03-09.pdf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Got stderr: Mar 10, 2020 4:47:54 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
-      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Mar 10, 2020 4:47:55 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font Arial-BoldMT are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:55 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
-      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Mar 10, 2020 4:47:55 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font Arial-BoldMT are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:56 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
-      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Mar 10, 2020 4:47:56 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font Arial-BoldMT are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:58 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:58 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font ArialMT are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font ArialMT are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font ArialMT are not implemented in PDFBox and will be ignored\n",
-      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
-      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "found to process:  2020-03-06.pdf\n",
+      "output:  2020-03-09,china,N/A,N/A\n",
+      "found to process:  2020-03-07.pdf\n",
+      "output:  2020-03-09,china,N/A,N/A\n",
+      "found to process:  2020-03-08.pdf\n",
+      "output:  2020-03-09,china,N/A,N/A\n",
+      "found to process:  2020-03-09.pdf\n",
       "output:  2020-03-09,china,N/A,N/A\n"
      ]
     }
@@ -228,21 +171,15 @@
    "source": [
     "dfToProcess = findFilesToProcess(mypath,filelist)\n",
     "rows, columns = dfToProcess.shape\n",
-    "#f = dfToProcess['file'].iloc[0]\n",
-    "#print(f)\n",
-    "if (rows > 0): #there are files to process, process the first file\n",
-    "    f = dfToProcess['file'].iloc[0]\n",
-    "    print(\"found to process: \", f)\n",
-    "    out = processFile(mypath,filelist,summary,f)\n",
-    "    print(\"output: \", out)\n"
+    "\n",
+    "if (rows > 0): #there are files to process\n",
+    "    #f = dfToProcess['file'].iloc[0]  # just do one file\n",
+    "    \n",
+    "    for f in dfToProcess['file'].tolist():   \n",
+    "        print(\"found to process: \", f)\n",
+    "        out = processFile(mypath,filelist,summary,f)\n",
+    "        print(\"output: \", out)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
