--- a/covid19/covid.ipynb
+++ b/covid19/covid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -22,10 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#mypath = '/home/joe/data/covid19/who'\n",
     "mypath = '/home/joe/data/covid19/who/test'\n",
     "#mypath = '/run/user/1000/gvfs/smb-share:server=majesty.local,share=filesjoe/data/who_covid19_reports/renamed'\n",
     "filelist = '/home/joe/datavisions/covid19/filelist'\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -157,13 +158,125 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found to process:  2020-03-06.pdf\n",
-      "output:  2020-03-09,china,N/A,N/A\n",
-      "found to process:  2020-03-07.pdf\n",
-      "output:  2020-03-09,china,N/A,N/A\n",
-      "found to process:  2020-03-08.pdf\n",
-      "output:  2020-03-09,china,N/A,N/A\n",
-      "found to process:  2020-03-09.pdf\n",
+      "found to process:  2020-03-06.pdf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Got stderr: Mar 10, 2020 9:12:25 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "Mar 10, 2020 9:12:25 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "Mar 10, 2020 9:12:26 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "update filelist \n",
+      "output:  2020-03-06,china,80711,3045\n",
+      "found to process:  2020-03-07.pdf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Got stderr: Mar 10, 2020 9:12:32 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "update filelist \n",
+      "output:  2020-03-07,china,80813,3073\n",
+      "found to process:  2020-03-08.pdf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Got stderr: Mar 10, 2020 9:12:38 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "Mar 10, 2020 9:12:38 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "Mar 10, 2020 9:12:39 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "update filelist \n",
+      "output:  2020-03-08,china,80859,3100\n",
+      "found to process:  2020-03-09.pdf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Got stderr: Mar 10, 2020 9:12:43 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "Mar 10, 2020 9:12:44 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font Arial-BoldMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:44 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "Mar 10, 2020 9:12:44 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font Arial-BoldMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:44 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "Mar 10, 2020 9:12:44 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font Arial-BoldMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:46 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:46 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:46 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:47 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:47 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:47 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:47 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:47 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:47 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:48 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:48 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font ArialMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:48 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font ArialMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:48 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:48 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font ArialMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 9:12:48 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "update filelist \n",
       "output:  2020-03-09,china,N/A,N/A\n"
      ]
     }
@@ -178,7 +291,7 @@
     "    for f in dfToProcess['file'].tolist():   \n",
     "        print(\"found to process: \", f)\n",
     "        out = processFile(mypath,filelist,summary,f)\n",
-    "        print(\"output: \", out)\n"
+    "        print(\"output: \", out) \n"
    ]
   },
   {
